Trying to fix Safari stretches

--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,7 @@
 /*-------------Header logo------------- */
 .logo_container{
   display: flex;  
+  flex-direction: row;
   height: 100%;
   float: right;
   align-items: center;
@@ -47,6 +48,7 @@
 
 .logo_container a{  
   display: flex;  
+  flex-direction: row;
   height: 100%;      
   float: right;
   align-items: center;    
